Allow enhanced class redefinition if you are using JBR

--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,9 @@ neoForge {
 
             // Comma-separated list of namespaces to load gametests from. Empty = all namespaces.
             systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
+            // allow hotswapping moar.
+            jvmArgument '-XX:+IgnoreUnrecognizedVMOptions'
+            jvmArgument '-XX:+AllowEnhancedClassRedefinition'
         }
 
         server {
