--- a/gradle.properties
+++ b/gradle.properties
@@ -16,11 +16,11 @@ minecraft_version=1.21.1
 # The Minecraft version range can use any release version of Minecraft as bounds.
 # Snapshots, pre-releases, and release candidates are not guaranteed to sort properly
 # as they do not follow standard versioning conventions.
-minecraft_version_range=[1.21.1, 1.22)
+minecraft_version_range=[1.21, 1.22)
 # The Neo version must agree with the Minecraft version to get a valid artifact
 neo_version=21.1.35
 # The Neo version range can use any version of Neo as bounds
-neo_version_range=[21.1.0,)
+neo_version_range=[21.0,)
 # The loader version range can only use the major version of FML as bounds
 loader_version_range=[4,)
 
@@ -32,7 +32,7 @@ mod_id=monitorial
 # The human-readable display name for the mod.
 mod_name=Monitorial
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
-mod_license=All Rights Reserved
+mod_license=LGPL-3.0-only
 # The mod version. See https://semver.org/
 mod_version=1.0.0
 # The group ID for the mod. It is only important when publishing as an artifact to a Maven repository.
